--- a/tests/Dockerfile.test
+++ b/tests/Dockerfile.test
@@ -8,11 +8,11 @@ WORKDIR /app
 COPY test.sh /app/test.sh
 COPY 1404.sh /app/1404.sh
 COPY 1604.sh /app/1604.sh
+COPY 1804.sh /app/1804.sh
 COPY _helpers.sh /app/_helpers.sh
-COPY expected/1404-php5.html /app/expected/1404-php5.html
 COPY expected/1404-php7.html /app/expected/1404-php7.html
-COPY expected/1604-php5.html /app/expected/1604-php5.html
 COPY expected/1604-php7.html /app/expected/1604-php7.html
+COPY expected/1804-php7.html /app/expected/1804-php7.html
 
 RUN mkdir -p actual/
 
